# conic-fit

./: Cargo.toml  README.md  barra-ovale.asc
examples/: ellipse_fit.rs
examples/barra_ovale/: main.rs
src/: conics2d.rs  docs-header.html  ellipse_simplified.rs  header-script.js  lib.rs
